--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /Outputs/NetTrafficTSharkOutput
+/Outputs/PollDeviceOutput/1
+/Outputs/PollDeviceOutput/192.168.1.1
