Replaced the username and password variables for all Netmiko connections with the global preropties to allow for user to enter login credentials.
This was overlooked until testing was undertaken on the tool

--- a/.gitignore
+++ b/.gitignore
@@ -356,3 +356,5 @@ MigrationBackup/
 /Outputs/CompareConfOutput/2020-05-16
 /Outputs/SaveConfOutput/R2/RunningConf
 /Outputs/SaveConfOutput/R2/StartupConf
+/Outputs/CompareConfOutput/2020-05-17/Test_To_R1_2020-05-14_01-10-02_AM_StartupConfiguration_Difference.html
+/Outputs/SaveConfOutput
